java/cuvs-java/src/main/java/com/nvidia/cuvs/panama/ivf_flat_h.java


  /**
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatIndexParamsCreate(cuvsIvfFlatIndexParams_t *index_params)
   * }
   */
  public static int cuvsIvfFlatIndexParamsCreate(MemorySegment index_params) {
    var mh$ = cuvsIvfFlatIndexParamsCreate.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("cuvsIvfFlatIndexParamsCreate", index_params);
      }
      return (int) mh$.invokeExact(index_params);
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class cuvsIvfFlatIndexParamsDestroy {
    public static final FunctionDescriptor DESC = FunctionDescriptor.of(ivf_flat_h.C_INT, ivf_flat_h.C_POINTER);

    public static final MemorySegment ADDR = ivf_flat_h.findOrThrow("cuvsIvfFlatIndexParamsDestroy");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatIndexParamsDestroy(cuvsIvfFlatIndexParams_t index_params)
   * }
   */
  public static FunctionDescriptor cuvsIvfFlatIndexParamsDestroy$descriptor() {
    return cuvsIvfFlatIndexParamsDestroy.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatIndexParamsDestroy(cuvsIvfFlatIndexParams_t index_params)
   * }
   */
  public static MethodHandle cuvsIvfFlatIndexParamsDestroy$handle() {
    return cuvsIvfFlatIndexParamsDestroy.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatIndexParamsDestroy(cuvsIvfFlatIndexParams_t index_params)
   * }
   */
  public static MemorySegment cuvsIvfFlatIndexParamsDestroy$address() {
    return cuvsIvfFlatIndexParamsDestroy.ADDR;
  }

  /**
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatIndexParamsDestroy(cuvsIvfFlatIndexParams_t index_params)
   * }
   */
  public static int cuvsIvfFlatIndexParamsDestroy(MemorySegment index_params) {
    var mh$ = cuvsIvfFlatIndexParamsDestroy.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("cuvsIvfFlatIndexParamsDestroy", index_params);
      }
      return (int) mh$.invokeExact(index_params);
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  /**
   * {@snippet lang = c :
   * typedef struct cuvsIvfFlatSearchParams {
   *     uint32_t n_probes;
   * } *cuvsIvfFlatSearchParams_t
   * }
   */
  public static final AddressLayout cuvsIvfFlatSearchParams_t = ivf_flat_h.C_POINTER;

  private static class cuvsIvfFlatSearchParamsCreate {
    public static final FunctionDescriptor DESC = FunctionDescriptor.of(ivf_flat_h.C_INT, ivf_flat_h.C_POINTER);

    public static final MemorySegment ADDR = ivf_flat_h.findOrThrow("cuvsIvfFlatSearchParamsCreate");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSearchParamsCreate(cuvsIvfFlatSearchParams_t *params)
   * }
   */
  public static FunctionDescriptor cuvsIvfFlatSearchParamsCreate$descriptor() {
    return cuvsIvfFlatSearchParamsCreate.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSearchParamsCreate(cuvsIvfFlatSearchParams_t *params)
   * }
   */
  public static MethodHandle cuvsIvfFlatSearchParamsCreate$handle() {
    return cuvsIvfFlatSearchParamsCreate.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSearchParamsCreate(cuvsIvfFlatSearchParams_t *params)
   * }
   */
  public static MemorySegment cuvsIvfFlatSearchParamsCreate$address() {
    return cuvsIvfFlatSearchParamsCreate.ADDR;
  }

  /**
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSearchParamsCreate(cuvsIvfFlatSearchParams_t *params)
   * }
   */
  public static int cuvsIvfFlatSearchParamsCreate(MemorySegment params) {
    var mh$ = cuvsIvfFlatSearchParamsCreate.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("cuvsIvfFlatSearchParamsCreate", params);
      }
      return (int) mh$.invokeExact(params);
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class cuvsIvfFlatSearchParamsDestroy {
    public static final FunctionDescriptor DESC = FunctionDescriptor.of(ivf_flat_h.C_INT, ivf_flat_h.C_POINTER);

    public static final MemorySegment ADDR = ivf_flat_h.findOrThrow("cuvsIvfFlatSearchParamsDestroy");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSearchParamsDestroy(cuvsIvfFlatSearchParams_t params)
   * }
   */
  public static FunctionDescriptor cuvsIvfFlatSearchParamsDestroy$descriptor() {
    return cuvsIvfFlatSearchParamsDestroy.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSearchParamsDestroy(cuvsIvfFlatSearchParams_t params)
   * }
   */
  public static MethodHandle cuvsIvfFlatSearchParamsDestroy$handle() {
    return cuvsIvfFlatSearchParamsDestroy.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSearchParamsDestroy(cuvsIvfFlatSearchParams_t params)
   * }
   */
  public static MemorySegment cuvsIvfFlatSearchParamsDestroy$address() {
    return cuvsIvfFlatSearchParamsDestroy.ADDR;
  }

  /**
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatSearchParamsDestroy(cuvsIvfFlatSearchParams_t params)
   * }
   */
  public static int cuvsIvfFlatSearchParamsDestroy(MemorySegment params) {
    var mh$ = cuvsIvfFlatSearchParamsDestroy.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("cuvsIvfFlatSearchParamsDestroy", params);
      }
      return (int) mh$.invokeExact(params);
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  /**
   * {@snippet lang = c : * typedef cuvsIvfFlatIndex *cuvsIvfFlatIndex_t
   * }
   */
  public static final AddressLayout cuvsIvfFlatIndex_t = ivf_flat_h.C_POINTER;

  private static class cuvsIvfFlatIndexCreate {
    public static final FunctionDescriptor DESC = FunctionDescriptor.of(ivf_flat_h.C_INT, ivf_flat_h.C_POINTER);

    public static final MemorySegment ADDR = ivf_flat_h.findOrThrow("cuvsIvfFlatIndexCreate");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatIndexCreate(cuvsIvfFlatIndex_t *index)
   * }
   */
  public static FunctionDescriptor cuvsIvfFlatIndexCreate$descriptor() {
    return cuvsIvfFlatIndexCreate.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatIndexCreate(cuvsIvfFlatIndex_t *index)
   * }
   */
  public static MethodHandle cuvsIvfFlatIndexCreate$handle() {
    return cuvsIvfFlatIndexCreate.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatIndexCreate(cuvsIvfFlatIndex_t *index)
   * }
   */
  public static MemorySegment cuvsIvfFlatIndexCreate$address() {
    return cuvsIvfFlatIndexCreate.ADDR;
  }

  /**
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatIndexCreate(cuvsIvfFlatIndex_t *index)
   * }
   */
  public static int cuvsIvfFlatIndexCreate(MemorySegment index) {
    var mh$ = cuvsIvfFlatIndexCreate.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("cuvsIvfFlatIndexCreate", index);
      }
      return (int) mh$.invokeExact(index);
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class cuvsIvfFlatIndexDestroy {
    public static final FunctionDescriptor DESC = FunctionDescriptor.of(ivf_flat_h.C_INT, ivf_flat_h.C_POINTER);

    public static final MemorySegment ADDR = ivf_flat_h.findOrThrow("cuvsIvfFlatIndexDestroy");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatIndexDestroy(cuvsIvfFlatIndex_t index)
   * }
   */
  public static FunctionDescriptor cuvsIvfFlatIndexDestroy$descriptor() {
    return cuvsIvfFlatIndexDestroy.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatIndexDestroy(cuvsIvfFlatIndex_t index)
   * }
   */
  public static MethodHandle cuvsIvfFlatIndexDestroy$handle() {
    return cuvsIvfFlatIndexDestroy.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatIndexDestroy(cuvsIvfFlatIndex_t index)
   * }
   */
  public static MemorySegment cuvsIvfFlatIndexDestroy$address() {
    return cuvsIvfFlatIndexDestroy.ADDR;
  }

  /**
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatIndexDestroy(cuvsIvfFlatIndex_t index)
   * }
   */
  public static int cuvsIvfFlatIndexDestroy(MemorySegment index) {
    var mh$ = cuvsIvfFlatIndexDestroy.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("cuvsIvfFlatIndexDestroy", index);
      }
      return (int) mh$.invokeExact(index);
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class cuvsIvfFlatBuild {
    public static final FunctionDescriptor DESC = FunctionDescriptor.of(ivf_flat_h.C_INT, ivf_flat_h.C_LONG,
        ivf_flat_h.C_POINTER, ivf_flat_h.C_POINTER, ivf_flat_h.C_POINTER);

    public static final MemorySegment ADDR = ivf_flat_h.findOrThrow("cuvsIvfFlatBuild");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatBuild(cuvsResources_t res, cuvsIvfFlatIndexParams_t index_params, DLManagedTensor *dataset, cuvsIvfFlatIndex_t index)
   * }
   */
  public static FunctionDescriptor cuvsIvfFlatBuild$descriptor() {
    return cuvsIvfFlatBuild.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatBuild(cuvsResources_t res, cuvsIvfFlatIndexParams_t index_params, DLManagedTensor *dataset, cuvsIvfFlatIndex_t index)
   * }
   */
  public static MethodHandle cuvsIvfFlatBuild$handle() {
    return cuvsIvfFlatBuild.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatBuild(cuvsResources_t res, cuvsIvfFlatIndexParams_t index_params, DLManagedTensor *dataset, cuvsIvfFlatIndex_t index)
   * }
   */
  public static MemorySegment cuvsIvfFlatBuild$address() {
    return cuvsIvfFlatBuild.ADDR;
  }

  /**
   * {@snippet lang = c
   * : * cuvsError_t cuvsIvfFlatBuild(cuvsResources_t res, cuvsIvfFlatIndexParams_t index_params, DLManagedTensor *dataset, cuvsIvfFlatIndex_t index)
   * }
   */
  public static int cuvsIvfFlatBuild(long res, MemorySegment index_params, MemorySegment dataset, MemorySegment index) {
    var mh$ = cuvsIvfFlatBuild.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("cuvsIvfFlatBuild", res, index_params, dataset, index);
      }
      return (int) mh$.invokeExact(res, index_params, dataset, index);
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class cuvsIvfFlatSearch {
    public static final FunctionDescriptor DESC = FunctionDescriptor.of(ivf_flat_h.C_INT, ivf_flat_h.C_LONG,
        ivf_flat_h.C_POINTER, ivf_flat_h.C_POINTER, ivf_flat_h.C_POINTER, ivf_flat_h.C_POINTER, ivf_flat_h.C_POINTER);

    public static final MemorySegment ADDR = ivf_flat_h.findOrThrow("cuvsIvfFlatSearch");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }
